<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_server_24"
        app:tint="?attr/colorPrimary"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/profile_icon_desc" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/profile_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="18sp"
            tools:text="My Awesome Server" />

        <TextView
            android:id="@+id/profile_details_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:textSize="14sp"
            tools:text="user@example.com:22" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/button_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_24"
        app:tint="?attr/colorSecondary"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/edit_profile_desc"
        android:layout_gravity="center_vertical"
        android:padding="8dp"/>

     <ImageButton
        android:id="@+id/button_delete_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_delete_24"
        app:tint="?android:attr/textColorSecondary"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete_profile_desc"
        android:layout_gravity="center_vertical"
        android:padding="8dp"
        android:layout_marginStart="8dp"/>

</LinearLayout>
